--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,10 +1,9 @@
-<!--
 name: Generate Datas
 
-on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-  workflow_dispatch:
+#on:
+ # schedule: # execute every 12 hours
+   # - cron: "* */12 * * *"
+ # workflow_dispatch:
 
 jobs:
   build:
@@ -24,5 +23,3 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
--->
